[gd_scene load_steps=3 format=3 uid="uid://cfk36pyipkcuu"]

[ext_resource type="Script" uid="uid://dgkhhigde1rej" path="res://scripts/ui/calendar/day_cell.gd" id="1_b7sla"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nh74e"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.85, 0.9, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="DayCell" type="PanelContainer"]
custom_minimum_size = Vector2(120, 100)
offset_right = 120.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_nh74e")
script = ExtResource("1_b7sla")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 2

[node name="DayLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "1"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StaffingIndicator" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="FullLabel" type="Label" parent="VBoxContainer/StaffingIndicator"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.65, 0.2, 1)
text = "●"

[node name="ShortLabel" type="Label" parent="VBoxContainer/StaffingIndicator"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.3, 0.2, 1)
text = "●"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ShiftsContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2
